--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <input type="text" name="zipcode" id="zipcode" placeholder="12345"/>
         
         <label for="phonenumber">Phone Number</label>
-        <input type="tel" name="phonenumber" id="phonenumber" placeholder=" ###-###-####"/>
+        <input type="tel" name="phonenumber" id="phonenumber" placeholder="XXX-XXX-XXXX"/>
     
         <button type="submit">Submit</button>
       </form>   
